documentation/eris-cli/0.10.3/eris_chains_register.md
---

layout:     documentation
title:      "Documentation | eris:cli | eris chains register"

---

# eris chains register

Registers a blockchain on etcb (a blockchain for registering other blockchains

## Synopsis

Registers a blockchain on etcb (a blockchain for registering other blockchains

```bash
eris chains register [name]
```

## Options

```
  -e, --env=[]: multiple env vars can be passed using the KEY1:val1,KEY2:val1 syntax
      --etcb-chain="etcb_testnet": set the chain id of the etcb chain
      --etcb-host="interblock.io:46657": set the address of the etcb chain
  -l, --links=[]: multiple containers can be linked using the KEY1:val1,KEY2:val1 syntax
  -p, --pub="": pubkey to use for registering the chain in etcb
```

## Options inherited from parent commands

```
  -d, --debug[=false]: debug level output
      --machine="eris": machine name for docker-machine that is running VM
  -n, --num=1: container number
  -v, --verbose[=false]: verbose output
```

## See Also

* [eris chains](https://docs.erisindustries.com/documentation/eris-cli/0.10.3/eris_chains/)	 - Start, Stop, and Manage Blockchains.

## Specifications

* [Actions Specification](https://docs.erisindustries.com/documentation/eris-cli/0.10.3/actions_specification/)
* [Chains Specification](https://docs.erisindustries.com/documentation/eris-cli/0.10.3/chains_specification/)
* [Contracts Specification](https://docs.erisindustries.com/documentation/eris-cli/0.10.3/contracts_specification/)
* [Motivation](https://docs.erisindustries.com/documentation/eris-cli/0.10.3/motivation/)
* [Services Specification](https://docs.erisindustries.com/documentation/eris-cli/0.10.3/services_specification/)

